# linkholderlib

./: .gitignore  CMakeLists.txt  conanfile.py
include/: CMakeLists.txt  core.h
include/linkholder/: CMakeLists.txt  core.h
include/linkholder/model/: CMakeLists.txt  UrlItem.h  UrlStatistics.h
include/linkholder/service/: CMakeLists.txt  helper.h
include/model/: UrlItem.h  UrlStatistics.h  UrlTag.h
include/service/: helper.h
src/: CMakeLists.txt  core.cpp  main.cpp
src/linkholder/: CMakeLists.txt  core.cpp
src/linkholder/model/: CMakeLists.txt  UrlItem.cpp  UrlStatistics.cpp  UrlTag.cpp
src/linkholder/service/: CMakeLists.txt  helper.cpp
src/model/: UrlItem.cpp  UrlStatistics.cpp  UrlTag.cpp
src/service/: helper.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test.cpp
